[package]
name = "libargs"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"
description = "Get CLI arguments in a library called from C"
repository = "https://github.com/leo60228/libargs"
homepage = "https://github.com/leo60228/libargs"
readme = "README.md"
keywords = ["ffi", "cli"]
categories = ["ffi", "command-line-interface"]
license = "MIT OR Apache-2.0"

[badges]
is-it-maintained-issue-resolution = { repository = "leo60228/libargs" }
is-it-maintained-open-issues = { repository = "leo60228/libargs" }
maintenance = { status = "experimental" }

[dependencies]
once_cell = "1.2.0"

[features]
force_walk = []
